FIX: Adicionada coluna status faltante